--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -30,7 +30,7 @@
                     android:layout_height="60dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/background_radius"
-                    android:text="비회원으로 시작하기"
+                    android:text="가입 없이 바로 시작하기"
                     android:textSize="20sp" />
             </LinearLayout>
             <ImageView
