--- a/app/src/main/res/layout/contentlistview.xml
+++ b/app/src/main/res/layout/contentlistview.xml
@@ -6,25 +6,30 @@
     android:id="@+id/itemView"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title"
-        android:text="title"
-        android:textColor="@color/black"
-        android:layout_margin="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/content"
-        android:text="content"
-        android:textColor="@color/black"
-        android:layout_margin="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/time"
-        android:text="time"
-        android:textColor="@color/black"
-        android:layout_margin="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/title"
+            android:text="title"
+            android:textColor="@color/black"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/content"
+            android:text="content"
+            android:textColor="@color/black"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/time"
+            android:text="time"
+            android:textColor="@color/black"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
