--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,139 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<FrameLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".fragments.CalendarFragment"
-        android:background="#e9ecef">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#e9ecef"
+            tools:context=".fragments.CalendarFragment">
 
-            <TextView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:background="#e9ecef"
-                android:gravity="center"
-                android:text="달력"
-                android:textSize="50dp"
-                app:layout_constraintBottom_toTopOf="@+id/calendarView" />
-            <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/background_radius"
-        app:layout_constraintBottom_toTopOf="@id/linearLayout6"
-                />
-            <LinearLayout
-                android:id="@+id/linearLayout6"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout4">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:background="@color/black"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-
-
-            </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/white"
-        android:weightSum="4"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <ImageView
-            android:id="@+id/Chometap"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_calendar"/>
-
-        <ImageView
-            android:id="@+id/Ccalender"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_calendar" />
-
-        <ImageView
-            android:id="@+id/Ccommunity"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_calendar" />
-
-        <ImageView
-            android:id="@+id/Coption"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_calendar" />
-
-    </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="4"
-                app:layout_constraintBottom_toBottomOf="parent">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="100dp"
+                    android:background="#e9ecef"
                     android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text="홈"/>
-                <TextView
+                    android:text="달력"
+                    android:textSize="50dp"
+                    app:layout_constraintBottom_toTopOf="@+id/calendarView" />
+
+                <CalendarView
+                    android:id="@+id/calendarView"
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text="달력"/>
-                <TextView
+                    android:layout_height="350dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/background_radius"
+                    app:layout_constraintBottom_toTopOf="@id/linearLayout6"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout6"
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:text="게시판"/>
-                <TextView
+                    android:layout_height="3dp"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/black" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/linearLayout4"
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
+                    android:layout_height="60dp"
+                    android:background="@color/white"
+                    android:weightSum="4"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <ImageView
+                        android:id="@+id/CalendarHomeTap"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="7dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/bottom_nav_home" />
+
+                    <ImageView
+                        android:id="@+id/calender"
+                        android:layout_width="match_parent"
+                        android:layout_height="28dp"
+                        android:layout_margin="7dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/bottom_nav_calendar" />
+
+                    <ImageView
+                        android:id="@+id/CalendarCommunity"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="7dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/bottom_nav_board" />
+
+                    <ImageView
+                        android:id="@+id/CalendarOption"
+                        android:layout_width="match_parent"
+                        android:layout_height="28dp"
+                        android:layout_margin="7dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/bottom_nav_setting" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="설정"/>
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:weightSum="4"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="홈" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="달력" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="게시판" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="설정" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
     </FrameLayout>
-</FrameLayout>
 </layout>
