--- a/app/src/main/res/layout/fragment_contentclick.xml
+++ b/app/src/main/res/layout/fragment_contentclick.xml
@@ -5,7 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.contentclickFragment"
+        tools:context=".fragments.`ContentC]lickFragment`"
         android:orientation="vertical">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
