--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragments.CalendarFragment"
-            android:background="#e9ecef">
+            android:background="@color/background"
+            tools:context=".fragments.CalendarFragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -21,15 +23,16 @@
                     android:layout_width="300dp"
                     android:layout_height="250dp"
                     android:layout_marginTop="72dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/background_radius"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.41"
-                    android:background="@drawable/background_radius"
-                    android:layout_marginRight="5dp">
+                    app:layout_constraintVertical_bias="0.41">
+
                     <ScrollView
                         android:id="@+id/scrollView1"
                         android:layout_width="150dp"
@@ -52,20 +55,20 @@
                     <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="250dp"
-                        android:orientation="vertical"
-                        android:layout_marginLeft="10dp">
+                        android:layout_marginLeft="10dp"
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/right_text"
                             android:layout_width="170dp"
-                            android:layout_height="200dp"/>
+                            android:layout_height="200dp" />
 
                         <Button
                             android:id="@+id/button2"
                             android:layout_width="120dp"
                             android:layout_height="50dp"
-                            android:gravity="center"
                             android:layout_gravity="center"
+                            android:gravity="center"
                             android:text="추가하기" />
 
                     </LinearLayout>
@@ -76,16 +79,18 @@
                     android:layout_width="300dp"
                     android:layout_height="250dp"
                     android:layout_marginBottom="104dp"
+                    android:background="@drawable/background_radius"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:background="@drawable/background_radius">
+                    app:layout_constraintStart_toStartOf="parent">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="오늘의 운동"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:text="오늘의 운동" />
+
                     <ScrollView
                         android:id="@+id/scrollView2"
                         android:layout_width="match_parent"
@@ -100,32 +105,48 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                            app:layout_constraintTop_toTopOf="parent" />
                     </ScrollView>
+
                     <Button
+                        android:id="@+id/workoutBtn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/workoutBtn"
-                        android:text="운동 추가하러가기"/>
+                        android:text="운동 추가하러가기" />
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvYear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="(year)"
+                    android:fontFamily="@font/inter_medium"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.020" />
+
                 <TextView
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="58dp"
-                    android:text="TextView"
+                    android:text="(date)"
+                    android:fontFamily="@font/inter_bold"
+                    android:textSize="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.796"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.047" />
+                    app:layout_constraintVertical_bias="0.050" />
+
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:text="오늘의 식단"
+                    android:textAlignment="center"
                     app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                     app:layout_constraintHorizontal_bias="0.314"
                     app:layout_constraintStart_toStartOf="parent"
@@ -137,16 +158,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
                     app:layout_constraintBottom_toTopOf="@+id/linearLayout4">
-                    <LinearLayout
-                        android:background="@color/black"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -158,10 +175,12 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
 
-
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
 
                 </LinearLayout>
-
 
 
                 <LinearLayout
@@ -175,61 +194,70 @@
                     <ImageView
                         android:id="@+id/hometap"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="7dp"
                         android:layout_weight="1"
-                        android:src="@drawable/ic_calendar"/>
+                        android:src="@drawable/bottom_nav_home" />
 
                     <ImageView
                         android:id="@+id/calender"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="28dp"
+                        android:layout_margin="7dp"
                         android:layout_weight="1"
-                        android:src="@drawable/ic_calendar" />
+                        android:src="@drawable/bottom_nav_calendar" />
 
                     <ImageView
                         android:id="@+id/community"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="7dp"
                         android:layout_weight="1"
-                        android:src="@drawable/ic_calendar" />
+                        android:src="@drawable/bottom_nav_board" />
 
                     <ImageView
                         android:id="@+id/option"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="28dp"
+                        android:layout_margin="7dp"
                         android:layout_weight="1"
-                        android:src="@drawable/ic_calendar" />
+                        android:src="@drawable/bottom_nav_setting" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="4"
                     app:layout_constraintBottom_toBottomOf="parent">
+
                     <TextView
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:layout_height="wrap_content"
-                        android:text="홈"/>
+                        android:text="홈" />
+
                     <TextView
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:layout_height="wrap_content"
-                        android:text="달력"/>
+                        android:text="달력" />
+
                     <TextView
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:layout_height="wrap_content"
-                        android:text="게시판"/>
+                        android:text="게시판" />
+
                     <TextView
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:layout_height="wrap_content"
-                        android:text="설정"/>
+                        android:text="설정" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
