--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.healthCareApplication" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="windowNoTitle">true</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
     <style name="Theme.healthCareApplication" parent="Base.Theme.healthCareApplication" />
 </resources>
