--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,26 +17,99 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/tvYear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_medium"
+                    android:text="(year)"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.020" />
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_bold"
+                    android:text="(date)"
+                    android:textColor="@color/black"
+                    android:textSize="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.050" />
+
 
                 <LinearLayout
-                    android:id="@+id/linearLayout2"
+                    android:id="@+id/foodLinearLayout"
                     android:layout_width="300dp"
-                    android:layout_height="250dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/box_upper_radius"
+                    android:backgroundTint="@color/food_color"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.486"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.272">
+
+                    <TextView
+                        android:id="@+id/todayFood"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="65dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="오늘의 식단"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/todayFoodPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="85dp"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="+"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/todayFoodView"
+                    android:layout_width="300dp"
+                    android:layout_height="150dp"
                     android:layout_marginTop="72dp"
                     android:layout_marginRight="5dp"
-                    android:background="@drawable/background_radius"
                     android:orientation="horizontal"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+                    app:layout_constraintBottom_toTopOf="@+id/workoutLinearLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.41">
+                    app:layout_constraintVertical_bias="0.662">
+
+                    <TextView
+                        android:id="@+id/foodEmptyText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="40dp"
+                        android:layout_marginLeft="82dp"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="등록된 식단이 없습니다"
+                        android:textColor="@color/gray" />
 
                     <ScrollView
                         android:id="@+id/scrollView1"
                         android:layout_width="150dp"
-                        android:layout_height="250dp"
+                        android:layout_height="150dp"
                         android:layout_weight="1"
                         tools:ignore="SpeakableTextPresentCheck">
 
@@ -49,52 +122,73 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.094" />
+                            app:layout_constraintVertical_bias="0.094">
+                        </LinearLayout>
                     </ScrollView>
 
                     <LinearLayout
                         android:layout_width="150dp"
-                        android:layout_height="250dp"
+                        android:layout_height="150dp"
                         android:layout_marginLeft="10dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/right_text"
                             android:layout_width="170dp"
-                            android:layout_height="200dp" />
-
-                        <Button
-                            android:id="@+id/button2"
-                            android:layout_width="120dp"
-                            android:layout_height="50dp"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:text="추가하기" />
-
+                            android:layout_height="150dp" />
                     </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/linearLayout"
+                    android:id="@+id/workoutLinearLayout"
                     android:layout_width="300dp"
-                    android:layout_height="250dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/box_upper_radius"
+                    android:backgroundTint="@color/workout_color"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.504"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.637">
+
+                    <TextView
+                        android:id="@+id/todayWorkout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="65dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="오늘의 운동"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/addTodayWorkout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="85dp"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="+"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/todayWorkoutView"
+                    android:layout_width="300dp"
+                    android:layout_height="150dp"
                     android:layout_marginBottom="104dp"
-                    android:background="@drawable/background_radius"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="오늘의 운동" />
-
                     <ScrollView
                         android:id="@+id/scrollView2"
                         android:layout_width="match_parent"
-                        android:layout_height="248dp"
+                        android:layout_height="150dp"
                         android:layout_weight="1">
 
                         <LinearLayout
@@ -107,51 +201,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
                     </ScrollView>
-
-                    <Button
-                        android:id="@+id/workoutBtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="운동 추가하러가기" />
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tvYear"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="(year)"
-                    android:fontFamily="@font/inter_medium"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.020" />
-
-                <TextView
-                    android:id="@+id/tvDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="(date)"
-                    android:fontFamily="@font/inter_bold"
-                    android:textSize="30dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.050" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="28dp"
-                    android:text="오늘의 식단"
-                    android:textAlignment="center"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-                    app:layout_constraintHorizontal_bias="0.314"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.575" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout6"
