--- a/app/src/main/res/drawable/box_upper_radius.xml
+++ b/app/src/main/res/drawable/box_upper_radius.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#ffffff" />
-    <stroke
-        android:width="1dp"
-        android:color="#000000"/>
-    <radius android:radius="10dp" />
+    <corners
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp" />
 </shape>
