--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,18 +3,18 @@
     tools:ignore="ExtraText">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/bottom_nav_home"
         android:title="@string/home"/>
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/bottom_nav_board"
         android:title="@string/search"/>
     <item
         android:id="@+id/navigation_calendar"
-        android:icon="@drawable/ic_calendar"
+        android:icon="@drawable/bottom_nav_calendar"
         android:title="@string/calendar"/>
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/bottom_nav_setting"
         android:title="@string/profile"/>
 </menu>
